syntax = "proto3";

option go_package = "protobuf/;testdata";
package testdata;

enum RPC_OPCODES {
	RPC_None = 0;

	RPC_MysqlDescTable = 401;
	RPC_MysqlQuery = 402;
	RPC_MysqlInsert = 403;
	RPC_MysqlUpdate = 404;
	RPC_MysqlDelete = 405;
	RPC_MysqlQueryByFilter = 406;
	RPC_MysqlMultiQuery = 407;
	RPC_MysqlQueryAll = 408;
	RPC_MysqlStatement = 409;

}


enum RPC_CODE {
	CODE_Ok = 0;
	CODE_Ok_Async = 1;

	CODE_Timeout = 100;
	CODE_Unregister = 101;
	CODE_ParseError = 102;
	CODE_ErrorServerPost = 103; 
	CODE_RouteNotLinkToServer = 104;
	CODE_RouteSendToServerError = 105;
	CODE_OpcodeUnregister = 106;
	CODE_CreateMsgError = 107;
	CODE_LogicThreadNull = 108;
	CODE_NotReceivedReply = 109;
	CODE_NotSend = 110;
	CODE_LoadFromDbError = 111;
	CODE_DirtyFlagZero = 112;
	CODE_QueryError = 113;
	CODE_TableNameNotExistError = 114;
	CODE_GenerateQuerySQLError = 115;
	CODE_NotMatchedResultError = 116;
}


message CHANNEL
{
	string address = 1; // 区服ID
	string id = 3;      // 服务ID
}

message CLIENT_IDENTIFIER
{
	CHANNEL stub = 1;
	int64 seq_id = 2;
}

message SERVER_IDENTIFIER
{
	CHANNEL stub = 1;
}

message RPC_REQUEST
{
	CLIENT_IDENTIFIER client = 1;  // 调用方
	SERVER_IDENTIFIER server = 2;  // 被调用方
	string func_name = 3;
	bytes args_data = 4;
}

message STATUS
{
	int32 code = 1;
	string msg = 2;
}

message RPC_RESPONSE
{
	CLIENT_IDENTIFIER client = 1; // 调用方（与请求时一致）
	SERVER_IDENTIFIER server = 2; // 被调用方
	STATUS status = 3;
	bytes result_data = 4;
}